// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`normalizeTaxwareResponse — cas de référence > applique cantonRule 'vaud-office-mapping' pour VD Lausanne 1`] = `
{
  "canton": "VD",
  "cantonalBreakdown": {
    "cantonAdditionalTax": null,
    "churchTax": null,
    "displayedCantonalTotal": 43000,
    "municipalityAdditionalTax": null,
    "otherComponentsTotal": null,
    "principalCantonalTax": 22000,
    "principalCommunalTax": 14000,
    "unitaryTax": null,
  },
  "cantonalCommunalTax": 36000,
  "cantonalContext": {
    "cantonAdditionalTax": null,
    "cantonRule": "vaud-office-mapping",
    "childrenCount": 1,
    "exactCantonalField": "CantonTax",
    "exactCommunalField": "MunicipalityTax",
    "exactTotalField": "TotalTax",
    "exactUnitaryField": null,
    "municipalityAdditionalTax": null,
    "partnership": "Marriage",
    "quotientAppliedLocally": false,
    "rateDefiningIncomeCantonal": null,
  },
  "cantonalTax": 22000,
  "communalTax": 14000,
  "deductions": {
    "insurance": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "occupational": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "social": {
      "cantonal": null,
      "details": {
        "assets": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "children": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "personal": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "secondEarner": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
      },
      "federal": null,
      "wealth": null,
    },
  },
  "federalTax": 7000,
  "municipality": "Lausanne",
  "raw": {
    "Canton": "VD",
    "CantonTax": 22000,
    "FederalTax": 7000,
    "Municipality": "Lausanne",
    "MunicipalityTax": 14000,
    "NumChildren": 1,
    "Partnership": "Marriage",
    "TaxableIncomeCantonal": 180000,
    "TotalTax": 43000,
  },
  "taxableAssets": null,
  "taxableIncomeCantonal": 180000,
  "taxableIncomeFederal": null,
  "totalTax": 43000,
  "wealthTax": null,
}
`;

exports[`normalizeTaxwareResponse — cas de référence > calcule le cantonalCommunalTax et le totalTax par fallback de somme — ZG Zug 1`] = `
{
  "canton": "ZG",
  "cantonalBreakdown": {
    "cantonAdditionalTax": null,
    "churchTax": 210,
    "displayedCantonalTotal": 7510,
    "municipalityAdditionalTax": null,
    "otherComponentsTotal": 210,
    "principalCantonalTax": 4200,
    "principalCommunalTax": 3100,
    "unitaryTax": null,
  },
  "cantonalCommunalTax": 7510,
  "cantonalContext": {
    "cantonAdditionalTax": null,
    "cantonRule": "default",
    "childrenCount": 0,
    "exactCantonalField": "CantonTax",
    "exactCommunalField": "MunicipalityTax",
    "exactTotalField": null,
    "exactUnitaryField": null,
    "municipalityAdditionalTax": null,
    "partnership": "Single",
    "quotientAppliedLocally": false,
    "rateDefiningIncomeCantonal": null,
  },
  "cantonalTax": 4200,
  "communalTax": 3100,
  "deductions": {
    "insurance": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "occupational": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "social": {
      "cantonal": null,
      "details": {
        "assets": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "children": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "personal": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "secondEarner": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
      },
      "federal": null,
      "wealth": null,
    },
  },
  "federalTax": 480,
  "municipality": "Zug",
  "raw": {
    "Canton": "ZG",
    "CantonTax": 4200,
    "ChurchTax": 210,
    "FederalTax": 480,
    "Municipality": "Zug",
    "MunicipalityTax": 3100,
    "NumChildren": 0,
    "Partnership": "Single",
    "TaxableIncomeCantonal": 55000,
    "TaxableIncomeFederal": 56000,
    "WealthTaxCantonalCommunal": 1800,
  },
  "taxableAssets": null,
  "taxableIncomeCantonal": 55000,
  "taxableIncomeFederal": 56000,
  "totalTax": 9790,
  "wealthTax": 1800,
}
`;

exports[`normalizeTaxwareResponse — cas de référence > déballe le wrapper \`data\` — BE Biel/Bienne avec impôt paroissial 1`] = `
{
  "canton": "BE",
  "cantonalBreakdown": {
    "cantonAdditionalTax": null,
    "churchTax": 1500,
    "displayedCantonalTotal": 30500,
    "municipalityAdditionalTax": null,
    "otherComponentsTotal": 1500,
    "principalCantonalTax": 18000,
    "principalCommunalTax": 11000,
    "unitaryTax": null,
  },
  "cantonalCommunalTax": 30500,
  "cantonalContext": {
    "cantonAdditionalTax": null,
    "cantonRule": "default",
    "childrenCount": 2,
    "exactCantonalField": "CantonTax",
    "exactCommunalField": "MunicipalityTax",
    "exactTotalField": null,
    "exactUnitaryField": null,
    "municipalityAdditionalTax": null,
    "partnership": "Marriage",
    "quotientAppliedLocally": false,
    "rateDefiningIncomeCantonal": null,
  },
  "cantonalTax": 18000,
  "communalTax": 11000,
  "deductions": {
    "insurance": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "occupational": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "social": {
      "cantonal": null,
      "details": {
        "assets": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "children": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "personal": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "secondEarner": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
      },
      "federal": null,
      "wealth": null,
    },
  },
  "federalTax": 5200,
  "municipality": "Biel/Bienne",
  "raw": {
    "data": {
      "Canton": "BE",
      "CantonTax": 18000,
      "ChurchTax": 1500,
      "FederalTax": 5200,
      "Municipality": "Biel/Bienne",
      "MunicipalityTax": 11000,
      "NumChildren": 2,
      "Partnership": "Marriage",
      "TaxableIncomeCantonal": 150000,
      "TaxableIncomeFederal": 155000,
      "WealthTaxCantonalCommunal": 600,
    },
  },
  "taxableAssets": null,
  "taxableIncomeCantonal": 150000,
  "taxableIncomeFederal": 155000,
  "totalTax": 36300,
  "wealthTax": 600,
}
`;

exports[`normalizeTaxwareResponse — cas de référence > extrait les champs plats d'une réponse NE Le Locle minimale 1`] = `
{
  "canton": "NE",
  "cantonalBreakdown": {
    "cantonAdditionalTax": null,
    "churchTax": null,
    "displayedCantonalTotal": 14850,
    "municipalityAdditionalTax": null,
    "otherComponentsTotal": null,
    "principalCantonalTax": 8200,
    "principalCommunalTax": 5400,
    "unitaryTax": null,
  },
  "cantonalCommunalTax": 13600,
  "cantonalContext": {
    "cantonAdditionalTax": null,
    "cantonRule": "default",
    "childrenCount": 0,
    "exactCantonalField": "CantonTax",
    "exactCommunalField": "MunicipalityTax",
    "exactTotalField": "TotalTax",
    "exactUnitaryField": null,
    "municipalityAdditionalTax": null,
    "partnership": "Single",
    "quotientAppliedLocally": false,
    "rateDefiningIncomeCantonal": null,
  },
  "cantonalTax": 8200,
  "communalTax": 5400,
  "deductions": {
    "insurance": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "occupational": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "social": {
      "cantonal": null,
      "details": {
        "assets": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "children": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "personal": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "secondEarner": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
      },
      "federal": null,
      "wealth": null,
    },
  },
  "federalTax": 950,
  "municipality": "Le Locle",
  "raw": {
    "Canton": "NE",
    "CantonTax": 8200,
    "FederalTax": 950,
    "Municipality": "Le Locle",
    "MunicipalityTax": 5400,
    "NumChildren": 0,
    "Partnership": "Single",
    "TaxableAssets": 45000,
    "TaxableIncomeCantonal": 75000,
    "TaxableIncomeFederal": 76000,
    "TotalTax": 14850,
  },
  "taxableAssets": 45000,
  "taxableIncomeCantonal": 75000,
  "taxableIncomeFederal": 76000,
  "totalTax": 14850,
  "wealthTax": null,
}
`;

exports[`normalizeTaxwareResponse — cas de référence > retourne une structure à nulls pour une entrée vide 1`] = `
{
  "canton": null,
  "cantonalBreakdown": {
    "cantonAdditionalTax": null,
    "churchTax": null,
    "displayedCantonalTotal": null,
    "municipalityAdditionalTax": null,
    "otherComponentsTotal": null,
    "principalCantonalTax": null,
    "principalCommunalTax": null,
    "unitaryTax": null,
  },
  "cantonalCommunalTax": null,
  "cantonalContext": {
    "cantonAdditionalTax": null,
    "cantonRule": "default",
    "childrenCount": null,
    "exactCantonalField": null,
    "exactCommunalField": null,
    "exactTotalField": null,
    "exactUnitaryField": null,
    "municipalityAdditionalTax": null,
    "partnership": null,
    "quotientAppliedLocally": false,
    "rateDefiningIncomeCantonal": null,
  },
  "cantonalTax": null,
  "communalTax": null,
  "deductions": {
    "insurance": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "occupational": {
      "cantonal": null,
      "federal": null,
      "wealth": null,
    },
    "social": {
      "cantonal": null,
      "details": {
        "assets": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "children": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "personal": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
        "secondEarner": {
          "cantonal": null,
          "federal": null,
          "wealth": null,
        },
      },
      "federal": null,
      "wealth": null,
    },
  },
  "federalTax": null,
  "municipality": null,
  "raw": null,
  "taxableAssets": null,
  "taxableIncomeCantonal": null,
  "taxableIncomeFederal": null,
  "totalTax": null,
  "wealthTax": null,
}
`;
